// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Paragraph has a key 1`] = `
<div>
  <div
    aria-labelledby="textField_fieldDetails"
    class="form-group hide"
    data-field-name="textField"
  >
    <div
      class="form-group liferay-ddm-form-field-paragraph"
      data-field-name="textField"
    >
      <div
        class="liferay-ddm-form-field-paragraph-text"
      />
    </div>
    <input
      name="textField_edited"
      type="hidden"
      value="false"
    />
    <div
      aria-hidden="true"
      class="form-feedback-group lfr-de__field-feedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
        id="textField_fieldError"
      />
    </div>
  </div>
</div>
`;

exports[`Field Paragraph has a label 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
  >
    <label
      aria-labelledby="textField_fieldDetails"
      class="ddm-label"
    >
      label
    </label>
    <div
      class="form-group liferay-ddm-form-field-paragraph"
      data-field-name="textField"
    >
      <div
        class="liferay-ddm-form-field-paragraph-text"
      />
    </div>
    <input
      name="textField_edited"
      type="hidden"
      value="false"
    />
    <div
      aria-hidden="true"
      class="form-feedback-group lfr-de__field-feedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
        id="textField_fieldError"
      />
    </div>
    <span
      class="sr-only"
      id="textField_fieldDetails"
    >
      label
    </span>
  </div>
</div>
`;

exports[`Field Paragraph has a placeholder 1`] = `
<div>
  <div
    aria-labelledby="textField_fieldDetails"
    class="form-group hide"
    data-field-name="textField"
  >
    <div
      class="form-group liferay-ddm-form-field-paragraph"
      data-field-name="textField"
    >
      <div
        class="liferay-ddm-form-field-paragraph-text"
      />
    </div>
    <input
      name="textField_edited"
      type="hidden"
      value="false"
    />
    <div
      aria-hidden="true"
      class="form-feedback-group lfr-de__field-feedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
        id="textField_fieldError"
      />
    </div>
  </div>
</div>
`;

exports[`Field Paragraph has a value 1`] = `
<div>
  <div
    aria-labelledby="textField_fieldDetails"
    class="form-group hide"
    data-field-name="textField"
  >
    <div
      class="form-group liferay-ddm-form-field-paragraph"
      data-field-name="textField"
    >
      <div
        class="liferay-ddm-form-field-paragraph-text"
      />
    </div>
    <input
      name="textField_edited"
      type="hidden"
      value="false"
    />
    <div
      aria-hidden="true"
      class="form-feedback-group lfr-de__field-feedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
        id="textField_fieldError"
      />
    </div>
  </div>
</div>
`;

exports[`Field Paragraph has an id 1`] = `
<div>
  <div
    aria-labelledby="Id_fieldDetails"
    class="form-group hide"
    data-field-name="textField"
  >
    <div
      class="form-group liferay-ddm-form-field-paragraph"
      data-field-name="textField"
    >
      <div
        class="liferay-ddm-form-field-paragraph-text"
      />
    </div>
    <input
      name="textField_edited"
      type="hidden"
      value="false"
    />
    <div
      aria-hidden="true"
      class="form-feedback-group lfr-de__field-feedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
        id="Id_fieldError"
      />
    </div>
  </div>
</div>
`;

exports[`Field Paragraph is not required 1`] = `
<div>
  <div
    aria-labelledby="textField_fieldDetails"
    class="form-group hide"
    data-field-name="textField"
  >
    <div
      class="form-group liferay-ddm-form-field-paragraph"
      data-field-name="textField"
    >
      <div
        class="liferay-ddm-form-field-paragraph-text"
      />
    </div>
    <input
      name="textField_edited"
      type="hidden"
      value="false"
    />
    <div
      aria-hidden="true"
      class="form-feedback-group lfr-de__field-feedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
        id="textField_fieldError"
      />
    </div>
  </div>
</div>
`;

exports[`Field Paragraph is readOnly 1`] = `
<div>
  <div
    aria-labelledby="textField_fieldDetails"
    class="form-group hide"
    data-field-name="textField"
  >
    <div
      class="form-group liferay-ddm-form-field-paragraph"
      data-field-name="textField"
    >
      <div
        class="liferay-ddm-form-field-paragraph-text"
      />
    </div>
    <input
      name="textField_edited"
      type="hidden"
      value="false"
    />
    <div
      aria-hidden="true"
      class="form-feedback-group lfr-de__field-feedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
        id="textField_fieldError"
      />
    </div>
  </div>
</div>
`;

exports[`Field Paragraph renders Label if showLabel is true 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
  >
    <label
      aria-labelledby="textField_fieldDetails"
      class="ddm-label"
    >
      text
    </label>
    <div
      class="form-group liferay-ddm-form-field-paragraph"
      data-field-name="textField"
    >
      <div
        class="liferay-ddm-form-field-paragraph-text"
      />
    </div>
    <input
      name="textField_edited"
      type="hidden"
      value="false"
    />
    <div
      aria-hidden="true"
      class="form-feedback-group lfr-de__field-feedback"
    >
      <div
        aria-live="assertive"
        class="form-feedback-item"
        id="textField_fieldError"
      />
    </div>
    <span
      class="sr-only"
      id="textField_fieldDetails"
    >
      text
    </span>
  </div>
</div>
`;
